<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>de.amr.games.pacman</groupId>
    <artifactId>pacman-all</artifactId>
    <version>1.0</version>

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.organization.name>Armin Reichert</project.organization.name>
        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <vs.java>21</vs.java>
        <vs.javafx>21.0.2</vs.javafx>
        <vs.javafx-maven-plugin>0.0.8</vs.javafx-maven-plugin>
        <vs.junit>4.13.2</vs.junit>
        <vs.maven-compiler-plugin>3.10.1</vs.maven-compiler-plugin>
        <vs.maven-jar-plugin>3.2.0</vs.maven-jar-plugin>
        <vs.maven-shade-plugin>3.4.1</vs.maven-shade-plugin>
        <vs.maven-source-plugin>3.3.0</vs.maven-source-plugin>
        <vs.tinylog>2.7.0</vs.tinylog>
        <linux.jdk.path>/home/armin/.jdks/openjdk-21.0.2</linux.jdk.path>
    </properties>

    <modules>
        <module>pacman-core</module>
        <module>pacman-ui-fx-2d</module>
        <module>pacman-ui-fx-3d</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${vs.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-api</artifactId>
            <version>${vs.tinylog}</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <version>${vs.tinylog}</version>
        </dependency>
    </dependencies>

</project>